test/negative/i132-syntax-error.cfr
// Example for http://gsd.uwaterloo.ca:8888/question/623/display-compiler-errors-in-html-rendering

Company
   employs => Person

//# FRAGMENT

abstract - Person
   age -> integer

//# FRAGMENT

Adults -> Person in Company

//# FRAGMENT

1 + 2 = 5
